update home page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!Doctype html>
 <h3>You wake up at 10am on a Friday. You have don't remember if you have anything to do today. You can either atart your daily routine or check your phone. What do you do?</h1>
 <br />
 <ol>
